--- a/login.html
+++ b/login.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+    <title>LOGIN</title>
 </head>
 <body>
-    <h1>this is my app!</h1>
-    <h2>login form</h2>
+    <h1>login</h1>
 </body>
 </html>
